--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,20 +18,23 @@ jobs:
       run: |
         if [ $GITHUB_BASE_REF ]; then
           # Pull Request
+          echo "Pull request:"
           git fetch origin $GITHUB_BASE_REF --depth=1
           export DIFF=$( git diff --name-only origin/$GITHUB_BASE_REF $GITHUB_SHA )
-          echo "Diff between origin/$GITHUB_BASE_REF and $GITHUB_SHA"
+          echo "  diff between origin/$GITHUB_BASE_REF and $GITHUB_SHA"
         else
           # Push
+          echo "Push request:"
           git fetch origin ${{ github.event.before }} --depth=1
           export DIFF=$( git diff --name-only ${{ github.event.before }} $GITHUB_SHA )
-          echo "Diff between ${{ github.event.before }} and $GITHUB_SHA"
+          echo "  diff between ${{ github.event.before }} and $GITHUB_SHA"
         fi
         echo "$DIFF"
         # Escape newlines (replace \n with %0A)
         echo "::set-output name=diff::$( echo "$DIFF" | sed ':a;N;$!ba;s/\n/%0A/g' )"
 
-    - run: echo "${{ steps.diff.outputs.diff }}"
+    - name: Output changes
+      run: echo "${{ steps.diff.outputs.diff }}"
 
     - name: Check files
       run: |
@@ -55,16 +58,21 @@ jobs:
             # EXAMPLES/ directory
             RUN_CHECKS=1
           elif [ "$directory" == tests ]; then
-            # EXAMPLES/ directory
+            # tests/ directory
+            RUN_CHECKS=1
+          elif [ "$directory" == .github ]; then
+            # .github/ directory
             RUN_CHECKS=1
           fi
         done <<< "$DIFF"
         echo
         echo "run checks: ${RUN_CHECKS}"
+        if [[ ${RUN_CHECKS} -eq 0 ]]; then echo "nothing to check, exiting..."; exit 1; fi
 
   macosCheck:
     name: Test on Mac
     runs-on: macos-latest
+    needs: changesCheck
 
     steps:
     - uses: actions/checkout@v2
@@ -103,6 +111,7 @@ jobs:
   linuxCheck:
     name: Test on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
+    needs: changesCheck
 
     strategy:
       matrix:
@@ -121,13 +130,11 @@ jobs:
     - name: make
       run: make -j2 all
 
-    - name: make tests
-      run: make tests
-
 
   linuxCheck-Intel:
     name: Test Intel on ubuntu-20.04
     runs-on: ubuntu-20.04
+    needs: changesCheck
 
     steps:
     - uses: actions/checkout@v2
@@ -218,10 +225,29 @@ jobs:
     #- name: make tests
     #  run: make tests
 
+  linuxTest_0:
+    name: Test run example 0
+    runs-on: ubuntu-latest
+    needs: [linuxCheck]
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Install packages
+      run: ./.github/scripts/run_install.sh
+      shell: bash
+
+    - name: configure
+      run: ./configure
+
+    - name: make tests
+      run: make tests
+
+
   linuxTest_1:
     name: Test run example 1
     runs-on: ubuntu-latest
-    needs: [linuxCheck,linuxCheck-Intel]
+    needs: [linuxCheck]
 
     steps:
     - uses: actions/checkout@v2
@@ -232,8 +258,28 @@ jobs:
 
     - name: Run test
       env:
-        TESTDIR: EXAMPLES/regional_Greece_small/
-        TESTFLAGS: --with-mpi --enable-vectorization
+        TESTDIR: EXAMPLES/meshfem3D_examples/simple_model/
+        TESTFLAGS: --with-mpi  # --enable-vectorization
+
+      run: ./.github/scripts/run_tests.sh
+      shell: bash
+
+  linuxTest_2:
+    name: Test run example 2
+    runs-on: ubuntu-latest
+    needs: [linuxCheck]
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Install packages
+      run: ./.github/scripts/run_install.sh
+      shell: bash
+
+    - name: Run test
+      env:
+        TESTDIR: EXAMPLES/fault_examples/tpv5/
+        TESTFLAGS: --with-mpi
 
       run: ./.github/scripts/run_tests.sh
       shell: bash
