--- a/.travis.yml
+++ b/.travis.yml
@@ -51,8 +51,8 @@ env:
     # example 2 (acoustic)
     - TESTID=6 TESTCOV=0 TESTDIR=2 TESTFLAGS="" CUDA=false
 
-    # example 3 (poroelastic)
-    - TESTID=7 TESTCOV=0 TESTDIR=3 TESTFLAGS="--with-mpi" CUDA=false
+    # example 3 (poroelastic) -- offline, checked on github
+    #- TESTID=7 TESTCOV=0 TESTDIR=3 TESTFLAGS="--with-mpi" CUDA=false
 
     # example 4 (simple model, internal mesher) -- offline, checked on github
     #- TESTID=8 TESTCOV=0 TESTDIR=4 TESTFLAGS="--with-mpi" CUDA=false
@@ -66,23 +66,23 @@ env:
     # debug with bounds-check (elastic)
     - TESTID=11 TESTCOV=0 TESTDIR=7 TESTFLAGS="--enable-debug" CUDA=false
 
-    # PML example (acoustic)
-    - TESTID=12 TESTCOV=0 TESTDIR=8 TESTFLAGS="--with-mpi" CUDA=false
+    # PML example (acoustic) -- offline, checked on github
+    #- TESTID=12 TESTCOV=0 TESTDIR=8 TESTFLAGS="--with-mpi" CUDA=false
 
-    # PML example (elastic)
-    - TESTID=13 TESTCOV=0 TESTDIR=9 TESTFLAGS="--with-mpi" CUDA=false
+    # PML example (elastic) -- offline, checked on github
+    #- TESTID=13 TESTCOV=0 TESTDIR=9 TESTFLAGS="--with-mpi" CUDA=false
 
     # noise example
     - TESTID=14 TESTCOV=0 TESTDIR=10 TESTFLAGS="--with-mpi" CUDA=false
 
-    # tomographic model example
-    - TESTID=15 TESTCOV=0 TESTDIR=11 TESTFLAGS="--with-mpi" CUDA=false
+    # tomographic model example -- offline, checked on github
+    #- TESTID=15 TESTCOV=0 TESTDIR=11 TESTFLAGS="--with-mpi" CUDA=false
 
     # acoustic kernel example
     - TESTID=16 TESTCOV=0 TESTDIR=12 TESTFLAGS="--with-mpi" CUDA=false
 
-    # waterlayered example
-    - TESTID=17 TESTCOV=0 TESTDIR=13 TESTFLAGS="--with-mpi" CUDA=false
+    # waterlayered example -- offline, checked on github
+    #- TESTID=17 TESTCOV=0 TESTDIR=13 TESTFLAGS="--with-mpi" CUDA=false
 
     # elastic example, hex27, compilation w/ CUDA and MPI
     - TESTID=18 TESTCOV=0 TESTDIR=14 TESTFLAGS="--with-cuda=cuda5 --with-mpi" CUDA=true
@@ -93,32 +93,32 @@ env:
     # fault example tpv5 -- offline, checked on github
     #- TESTID=20 TESTCOV=0 TESTDIR=16 TESTFLAGS="--with-mpi" CUDA=false
 
-    # socal example
-    - TESTID=21 TESTCOV=0 TESTDIR=17 TESTFLAGS="--with-mpi" CUDA=false
+    # socal example -- offline, checked on github
+    #- TESTID=21 TESTCOV=0 TESTDIR=17 TESTFLAGS="--with-mpi" CUDA=false
 
-    # socal example w/ 1d_socal
-    - TESTID=22 TESTCOV=0 TESTDIR=17 TESTFLAGS="--with-mpi" CUDA=false
+    # socal example w/ 1d_socal -- offline, checked on github
+    #- TESTID=22 TESTCOV=0 TESTDIR=17 TESTFLAGS="--with-mpi" CUDA=false
 
-    # socal example w/ 1d_prem
-    - TESTID=23 TESTCOV=0 TESTDIR=17 TESTFLAGS="--with-mpi" CUDA=false
+    # socal example w/ 1d_prem -- offline, checked on github
+    #- TESTID=23 TESTCOV=0 TESTDIR=17 TESTFLAGS="--with-mpi" CUDA=false
 
-    # socal example w/ 1d_cascadia
-    - TESTID=24 TESTCOV=0 TESTDIR=17 TESTFLAGS="--with-mpi" CUDA=false
+    # socal example w/ 1d_cascadia -- offline, checked on github
+    #- TESTID=24 TESTCOV=0 TESTDIR=17 TESTFLAGS="--with-mpi" CUDA=false
 
-    # cavity example
-    - TESTID=25 TESTCOV=0 TESTDIR=18 TESTFLAGS="--with-mpi" CUDA=false
+    # cavity example -- offline, checked on github
+    #- TESTID=25 TESTCOV=0 TESTDIR=18 TESTFLAGS="--with-mpi" CUDA=false
 
-    # SEP example
-    - TESTID=26 TESTCOV=0 TESTDIR=19 TESTFLAGS="--with-mpi" CUDA=false
+    # SEP example -- offline, checked on github
+    #- TESTID=26 TESTCOV=0 TESTDIR=19 TESTFLAGS="--with-mpi" CUDA=false
 
-    # couple with FK
-    - TESTID=27 TESTCOV=0 TESTDIR=20 TESTFLAGS="--with-mpi" CUDA=false
+    # couple with FK -- offline, checked on github
+    #- TESTID=27 TESTCOV=0 TESTDIR=20 TESTFLAGS="--with-mpi" CUDA=false
 
     # layered model w/ point force, NGLL = 6 -- offline, checked on github
     #- TESTID=28 TESTCOV=0 TESTDIR=21 TESTFLAGS="--with-mpi" CUDA=false
 
-    # elastic halfspace, no absorbing
-    - TESTID=29 TESTCOV=0 TESTDIR=22 TESTFLAGS="--with-mpi" CUDA=false
+    # elastic halfspace, no absorbing -- offline, checked on github
+    #- TESTID=29 TESTCOV=0 TESTDIR=22 TESTFLAGS="--with-mpi" CUDA=false
 
     # gmsh example w/ LDDRK
     - TESTID=30 TESTCOV=0 TESTDIR=23 TESTFLAGS="--with-mpi" CUDA=false
@@ -129,8 +129,8 @@ env:
     # regular element mesh
     - TESTID=32 TESTCOV=0 TESTDIR=25 TESTFLAGS="--enable-vectorization" CUDA=false
 
-    # adjoint simulation
-    - TESTID=33 TESTCOV=0 TESTDIR=26 TESTFLAGS="--with-mpi" CUDA=false
+    # adjoint simulation -- offline, checked on github
+    #- TESTID=33 TESTCOV=0 TESTDIR=26 TESTFLAGS="--with-mpi" CUDA=false
 
     # gmsh example w/ hex27
     - TESTID=34 TESTCOV=0 TESTDIR=27 TESTFLAGS="--without-mpi" CUDA=false
@@ -223,10 +223,14 @@ before_install:
 
 
 install:
+  # installs compilers
   - bash .travis/run_install.sh
 
-
 script:
+  # builds executables
+  - bash .travis/run_build.sh
+
+  # runs test examples
   - bash .travis/run_tests.sh
 
 
